--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="flex h-screen flex-col"></div>
+    <div id="app" class="flex h-screen flex-col" data-theme="dark"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
