refactor: improve theme handling, autotagger, and dataset management
- Update theme loading to target the `html` element instead of `#app`
- Add `isAllSaved` state to track unsaved changes in dataset and tag group stores
- Enhance autotagger modal to handle errors and installation states better
- Modify dataset loading to prompt for unsaved changes before proceeding

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="">
+<html lang="" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="flex h-screen flex-col" data-theme="dark"></div>
+    <div id="app" class="flex h-screen flex-col"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
